src/test/resources/parser/valid/binary/boolean/shortCircuit.sbsc
a = (): bool -> {
    fail();
    return false;
};

b = false && a();

return true;