src/test/resources/parser/invalid/coercion/badBooleanAnd.sbsc
a = true && 3;

return false;